fix: title align & size buttons

--- a/src/app/components/our-skills/our-skills.component.scss
+++ b/src/app/components/our-skills/our-skills.component.scss
@@ -1,8 +1,17 @@
 .skills-container {
-  padding: 2rem 0;
+  padding: 8rem 0 0;
   &__title,
   &__carousel {
     padding-bottom: 2rem;
+  }
+  &__title {
+    button {
+      height: 3rem;
+      width: 3rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
   }
 }
 
@@ -26,7 +35,7 @@
 }
 
 .progress {
-  height: 0.2rem;
+  height: 0.125rem;
 }
 
 .progress,
